--- a/.github/workflows/pop.yml
+++ b/.github/workflows/pop.yml
@@ -24,11 +24,12 @@ jobs:
     - name: Download and Setup Poutine a pinned version of poutine
       env:
         PINNED_VERSION: v0.9.3
+        PINNED_ARCH: poutine_Linux_x86_64.tar.gz
         PINNED_HASH: 5947ed656ed58ea45eeba6cd4c00b1ef973cd0840b1030ff6a75e7201f907bca
       run: |
-        curl -sLO "https://github.com/boostsecurityio/poutine/releases/download/$PINNED_VERSION/poutine_Linux_arm64.tar.gz"
-        echo "$PINNED_HASH  poutine_Linux_arm64.tar.gz" | shasum -a 256 --check
-        tar -xvzf poutine_Linux_arm64.tar.gz
+        curl -sLO "https://github.com/boostsecurityio/poutine/releases/download/$PINNED_VERSION/$PINNED_ARCH"
+        echo "$PINNED_HASH  $PINNED_ARCH" | shasum -a 256 --check
+        tar -xvzf "$PINNED_ARCH"
 
     - name: Run Self-Test with Poutine on 'itself'
       run: |
