--- a/.github/workflows/pop.yml
+++ b/.github/workflows/pop.yml
@@ -3,11 +3,14 @@ name: POP - poutine on poutine
 on:
   push:
     branches: [ main ]
+    paths:
+      - .github/workflows/**
+      - action.yml
   pull_request:
     branches: [ main ]
     paths:
-      - '.github/workflows/**'
-      - 'action.yml'
+      - .github/workflows/**
+      - action.yml
 
 permissions:
   security-events: write
@@ -20,22 +23,6 @@ jobs:
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       with:
         path: itself
-
-    - name: Download and Setup Poutine a pinned version of poutine
-      env:
-        PINNED_VERSION: v0.9.3
-        PINNED_ARCH: poutine_Linux_x86_64.tar.gz
-        PINNED_HASH: 938c36de89eea18d69c8d5605a64ef1573e682cfd02b61d4cc2de3b0663a63bc
-      run: |
-        curl -sLO "https://github.com/boostsecurityio/poutine/releases/download/$PINNED_VERSION/$PINNED_ARCH"
-        echo "$PINNED_HASH  $PINNED_ARCH" | shasum -a 256 --check
-        tar -xvzf "$PINNED_ARCH"
-
-    - name: Run Self-Test with Poutine on 'itself'
-      run: |
-        ./poutine -format sarif analyze_local itself > results.sarif
-
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@4355270be187e1b672a7a1c7c7bae5afdc1ab94a
+    - uses: ./
       with:
-        sarif_file: results.sarif
+        path: itself
