--- a/action.yml
+++ b/action.yml
@@ -34,13 +34,13 @@ runs:
         
     - name: Analyze the repository
       shell: bash
-      working-directory: 
+      working-directory: ${{ env.POUTINE_TOOL_DIR }}
       run: |
         POUTINE_SARIF_FILE="${POUTINE_TOOL_DIR}/results.sarif"
-        "${POUTINE_TOOL_DIR}/poutine" -format sarif analyze_local "${REPOSITORY_PATH}" > "${POUTINE_SARIF_FILE}"
         echo "POUTINE_SARIF_FILE=${POUTINE_SARIF_FILE}" >> "${GITHUB_OUTPUT}"
+        "${POUTINE_TOOL_DIR}/poutine" -format sarif analyze_local "${TARGET_PATH}" > "${POUTINE_SARIF_FILE}"
       env:
-        REPOSITORY_PATH: ${{ inputs.repository_path }}
+        TARGET_PATH: ${{ inputs.path }}
 
     - name: Upload SARIF Findings
       uses: github/codeql-action/upload-sarif@4355270be187e1b672a7a1c7c7bae5afdc1ab94a # v3.24.10
