--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,7 @@ runs:
   using: composite
   steps:
     - name: Download and Setup
+      id: setup
       shell: bash
       env:
         PINNED_VERSION: v0.9.3
@@ -28,11 +29,11 @@ runs:
         echo "${PINNED_HASH}  ${PINNED_ARCH}" | shasum -a 256 --check
         
         # Decompress the tool
-        tar -xvzf "${PINNED_ARCH}"
+        tar -xzf "${PINNED_ARCH}"
         
     - name: Analyze the repository
+      id: analyze
       shell: bash
-      working-directory: ${{ env.POUTINE_TOOL_DIR }}
       run: |
         POUTINE_SARIF_FILE="${POUTINE_TOOL_DIR}/results.sarif"
         echo "POUTINE_SARIF_FILE=${POUTINE_SARIF_FILE}" >> "${GITHUB_OUTPUT}"
@@ -41,6 +42,7 @@ runs:
         TARGET_PATH: ${{ inputs.path }}
 
     - name: Upload SARIF Findings
+      id: upload
       uses: github/codeql-action/upload-sarif@4355270be187e1b672a7a1c7c7bae5afdc1ab94a # v3.24.10
       with:
         sarif_file: ${{ env.POUTINE_SARIF_FILE }}
