--- a/.github/workflows/pop.yml
+++ b/.github/workflows/pop.yml
@@ -25,6 +25,7 @@ jobs:
         disable-sudo: true
         egress-policy: block
         allowed-endpoints: >
+          github.com:443
           api.github.com:443
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
     - uses: ./
