--- a/.github/workflows/pop.yml
+++ b/.github/workflows/pop.yml
@@ -29,3 +29,5 @@ jobs:
           api.github.com:443
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
     - uses: ./
+      name: "Run poutine on poutine's own codebase"
+      id: self-test
