--- a/.github/workflows/pop.yml
+++ b/.github/workflows/pop.yml
@@ -27,6 +27,8 @@ jobs:
         allowed-endpoints: >
           github.com:443
           api.github.com:443
+          codeload.github.com:443
+          objects.githubusercontent.com:443
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
     - uses: ./
       name: "Run poutine on poutine's own codebase"
